creada vista para añadir nueva persona

--- a/Views/Login/index.cshtml
+++ b/Views/Login/index.cshtml
@@ -8,7 +8,7 @@
 
     <div class="form-outline mb-4">
         <label class="form-label" for="usuario-input">Usuario</label>
-        <input type="text" id="usuario-inpu" class="form-control" />
+        <input type="text" id="usuario-input" class="form-control" />
     </div>
 
 
@@ -19,6 +19,9 @@
 
 
     <button type="button" class="btn btn-primary btn-block mb-4">Entrar</button>
-
+    <a href="~/Crud/Crear">CREAR</a>
 
 </form>
+<script>
+    alert("hola mundo");
+</script>
