Añadida autorizacion para los endpoints del crus

--- a/Views/Crud/Index.cshtml
+++ b/Views/Crud/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 <div>
-    <a href="~/Crud/Crear" target="_blank" class="btn btn-primary btn-block mb-4">Nueva Persona</a>
-    <a class="btn btn-primary btn-block mb-4">Editar Persona</a>
-    <a>Eliminar Persona</a>
-    <a>Reportes</a>
+    <a href="~/Crud/Crear"  class="btn btn-primary btn-block mb-4">Nueva Persona</a>
+    <a href="~/Crud/Editar"  class="btn btn-primary btn-block mb-4">Editar Persona</a>
+    <a href="~/Crud/Eliminar" class="btn btn-primary btn-block mb-4">Eliminar Persona</a>
+    <a href="~/Crud/Consultar" class="btn btn-primary btn-block mb-4">Reporte</a>
 </div>
 
 
