Creada la vista base de los reportes

--- a/Views/Crud/Index.cshtml
+++ b/Views/Crud/Index.cshtml
@@ -8,7 +8,7 @@
     <a href="~/Crud/Crear"  class="btn btn-primary btn-block mb-4">Nueva Persona</a>
     <a href="~/Crud/Editar"  class="btn btn-primary btn-block mb-4">Editar Persona</a>
     <a href="~/Crud/Eliminar" class="btn btn-primary btn-block mb-4">Eliminar Persona</a>
-    <a href="~/Crud/Consultar" class="btn btn-primary btn-block mb-4">Reporte</a>
+    <a href="~/Reporte" class="btn btn-primary btn-block mb-4">Reporte</a>
 </div>
 
 
